# minibench-harness

./: .gitignore  README.md  pyproject.toml
artifacts/demo-cycle/: config_seal.json  cycle_summary.json  settlement_calendar.json  settlements.jsonl
artifacts/demo-cycle-pypath/: config_seal.json  cycle_summary.json  forecasts.jsonl  settlements.jsonl
artifacts/live-prep/: futureeval_receipt.json  futureeval_source_extract.json  live_config_seal.json  live_rules_receipt.json  manifest.json  self_mastery_prereg.json  source_extracts.json
artifacts/metaculus-discovery/: api2_questions_minibench_project_unknown.summary.json  api_project_slug_minibench-2026-06-29.summary.json  api_project_slug_minibench-2026-07-13.summary.json  api_project_slug_minibench-2026-07-27.summary.json  api_project_slug_minibench.summary.json  bot_testing_area_continuous_cdf_post_smoke_receipt.json  bot_testing_area_dry_run_packet.json  bot_testing_area_multiple_choice_post_smoke_receipt.json  bot_testing_area_post_smoke_receipt.json  cycle_slug_projects_minibench-2026-06-15.summary.json  cycle_slug_projects_minibench-2026-06-29.summary.json  cycle_slug_projects_minibench-2026-07-13.summary.json  cycle_slug_projects_minibench.summary.json  cycle_slug_tournaments_minibench-2026-06-15.summary.json  cycle_slug_tournaments_minibench-2026-06-29.summary.json  cycle_slug_tournaments_minibench-2026-07-13.summary.json  cycle_slug_tournaments_minibench.summary.json  discovery_summary.json  manifest.json  (+46 more)
tests/: test_core.py  test_futureeval.py  test_io.py  test_live_prep.py  test_metaculus_transport.py
(+7 files in other folders)
